--- a/boka.html
+++ b/boka.html
@@ -13,7 +13,7 @@
 <body class="FormBody">
     <div class="header">
         <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <a href="index.html"><img src="Logo.png" alt="Resturang" class="logo"></a>
+        <a href="index.html"><img src="Logo.png" alt="EatIT" class="logo"></a>
         <div class="menyer">
             <div class="matmeny meny">
                 <a href="meny.html">Meny</a>
@@ -67,9 +67,15 @@
                 <label for="checkout-date">tid</label><br>
                 <input type="time" id="checkout-date" name="checkout" required>
             </div>
-            <button type="submit">Boka</button>
+            <button type="submit">Boka</button><br>
+            <div>
+                <a href="beställ">ifall du vill beställa hem</a>
+            </div>
         </form>
     </div>
 </body>
+
+<script>
+</script>
 
 </html>
