--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Ändra restaurang till företagets namn-->
-    <title>Resturang</title>
+    <title>EatIT</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="body">
     <div class="header">
         <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <img src="Logo.png" alt="Resturang" class="logo" href="index.html">
+        <img src="Logo.png" alt="EatIT" class="logo" href="index.html">
         <div class="menyer">
             <div class="matmeny meny">
                 <a class="meny-text" href="meny.html">Meny</a>
