--- a/meny.html
+++ b/meny.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <a href="index.html"><img src="Logo.png" alt="Resturang" class="logo"></a>
+        <a href="index.html"><img src="Logo.png" alt="EatIT" class="logo"></a>
         <div class="menyer">
             <div class="matmeny meny">
                 <a href="meny.html">Meny</a>
