--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,7 @@
                 <a class="oppettider">Öppettider:</a><br>
                 <a>Måndag	11-23</a><br>
                 <a>Tisdag	11-23</a><br>
-                <a>Onsdag	11-01</a>
+                <a>Onsdag	11-01</a><br>
                 <a>Torsdag	11-01</a><br>
                 <a>Fredag	11-02</a><br>
                 <a>Lördag   12-02</a><br>
@@ -71,7 +71,7 @@
                 <a class="oppettider">Öppettider:</a><br>
                 <a>Måndag	10-20</a><br>
                 <a>Tisdag	10-20</a><br>
-                <a>Onsdag	10-22</a>
+                <a>Onsdag	10-22</a><br>
                 <a>Torsdag	10-22</a><br>
                 <a>Fredag	10-23</a><br>
                 <a>Lördag   11-23</a><br>
