--- a/Beställ.html
+++ b/Beställ.html
@@ -27,6 +27,7 @@
         </div>
     </div>
     <div class="Form2">
+        <br>
         <form method="post">
             <div class="elem-group">
                 <label for="name">Ditt namn och efternamn</label>
@@ -45,6 +46,13 @@
             <textarea name="Beställning" cols="30" rows="10"></textarea>
             <button type="submit">Boka</button>
         </form>
+        <br>
+        <br>
+        <div>
+            <a href="boka.html">ifall du vill boka bord</a>
+        </div>
+        <br>
+        <br>
     </div>
 </body>
 
