--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <a class="meny-text" href="kontakt.html">Kontakta Oss</a>
             </div>
             <div class="boka meny">
-                <a class="meny-text" href="boka.html">Om Oss</a>
+                <a class="meny-text" href="boka.html">boka</a>
             </div>
         </div>
     </div>
     <div class="sida">
         <!--Ändra Resturang till ditt resturang namn-->
-        <a class="välkommen">Välkommen! till Resturang</a>
+        <a class="välkommen">Välkommen! till EatIT  </a>
         <div class="huvudsida">
             <div class="boka meny">
                 <a href="boka.html">Boka</a>
@@ -37,6 +37,16 @@
             </div>
         </div>
     </div>
+    <!--<div class="tack">
+        <h2>
+            <a>Tack för besöket och glöm inte att Restaurang EatIT har levande musik flera dagar i veckan och quiz på fredag, varje vecka året runt.</a> <br> <a style="color: #ccc1;">Under mello har vi Pride tema.</a>
+            <a><br> Vi på Restaurang EatIT önskar er en fortsatt trevlig dag. <br> Evert och Berit med personal</a>
+        </h2>
+        <br>
+        <br>
+        <h2><a>Hitta hit!</a></h2>
+        <h2><a>Det gör du under Kontakta Oss</a></h2>
+    </div>-->
     <div class="footer">
         <a>Ansvarig: Erik S.N</a>
     </div>
