--- a/kontakt.html
+++ b/kontakt.html
@@ -30,7 +30,7 @@
         <div class="kontakt-1">
             <a>Göteborg</a>
             </br>
-            <a>Valthornsgatan 123</a>
+            <a href="https://goo.gl/maps/aoAZpyrvJsYQA6BW7" target="_blank">Valthornsgatan 123</a>
             </br>
             <a>421 46  Västra Frölunda</a>
             </br>
@@ -56,7 +56,7 @@
         <div class="kontakt-2">
             <a>Kungsmässan</a>
             </br>
-            <a>Borgmästaregatan 5</a>
+            <a href="https://goo.gl/maps/9bcEcRunJYn6EKzy6" target="_blank">Borgmästaregatan 5</a>
             </br>
             <a>434 32 Kungsbacka</a>
             </br>
