ändringar på menyn

--- a/meny.html
+++ b/meny.html
@@ -31,6 +31,8 @@
         <a href="#veckomatsedel">Veckans matsedel</a>
         <br>
         <a href="#alecarte">à la carte meny</a>
+        <br>
+        <a href="#Övrigt">Övrigt</a>
     </div>
 
     <div class="sida-meny">
@@ -63,21 +65,13 @@
                         <h4><a>Onsdag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Ugnsbakad lax med löjromsås och kokt potatis <br> Pastasnäckor ”Gorgonzola”
                     </td>
                     <td>
-                        <h4><a>I BAREN</a></h4> <br> Hamburgare av högrev 85:- <br> Nötter 45:- <br> Chips 55:- <br> Ost talrik 65:-</td>
-                </tr>
-                <tr>
-                    <td>
                         <h4><a>Torsdag</a></h4> <br> Rostbiff med rödvinssås, potatisgratäng <br> Kokt torsk med skirat smör och pepparrot <br> Lasagne ”al Forno”
+
                     </td>
-                    <td>
-                        <h4><a>Lunchpizzor</a></h4> <br> Baltamasa Tomat, ost, skinka, banan, curry <br> Cappricciosa Tomat, ost, skinka, champinjoner <br> Hawai Tomat, ost, skinka, ananas <br> Funghi Tomat, ost, champinjoner</td>
                 </tr>
                 <tr>
                     <td>
                         <h4><a>Fredag</a></h4> <br> Oxfilé med persiljesmör och potatismos <br> Ostpanerad fiskfilé med skarpsås <br> Spaghetti ”Bolognese” Tacos
-                    </td>
-                    <td>
-                        <h4><a>Barnmatsedel</a></h4> <br> Korv eller hamburgare med pommes frites 53:- <br> Barnpizza 67:- <br> Spaghetti med köttfärssås 62:-
                     </td>
                 </tr>
             </table>
@@ -112,35 +106,16 @@
                         <h4><a>Onsdag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Kokt torsk med skirat smör och pepparrot <br> Lasagne ”al Forno”
                     </td>
                     <td>
-                        <h4><a>I BAREN</a></h4> <br> Hamburgare av högrev 85:- <br> Nötter 45:- <br> Chips 55:- <br> Ost talrik 65:-</td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4><a>Torsdag</a></h4> <br> Rostbiff med rödvinssås, potatisgratäng <br> Ugnsbakad lax med löjromsås och kokt potatis <br> Pastasnäckor ”Gorgonzola”
-                    </td>
-                    <td>
-                        <h4><a>Lunchpizzor</a></h4> <br> Baltamasa Tomat, ost, skinka, banan, curry <br> Cappricciosa Tomat, ost, skinka, champinjoner <br> Hawai Tomat, ost, skinka, ananas <br> Funghi Tomat, ost, champinjoner
+                        <h4><a>Torsdag</a></h4> Rostbiff med rödvinssås, potatisgratäng <br> Ugnsbakad lax med löjromsås och kokt potatis <br> Pastasnäckor ”Gorgonzola”
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <h4><a>Fredag</a></h4> <br> Oxfilé med persiljesmör och potatismos <br> Ostpanerad fiskfilé med skarpsås <br> Penne med tomatsås, kyckling och grönsaker
                     </td>
-                    <td>
-                        <h4><a>Barnmatsedel</a></h4> <br> Korv eller hamburgare med pommes frites 53:- <br> Barnpizza 67:- <br> Spaghetti med köttfärssås 62:-
-                    </td>
                 </tr>
             </table>
         </div>
-    </div>
-    <div class="priser">
-        <h3><a>Övriga Priser</a></h3>
-        <a>Första rätten varje dag kostar 94:-. <br> Alla övriga rätter kostar 75:-. <br> Kaffe 10:- (i samband med lunch)<br> I priset ingår: Varmrätt, salladsbuffé, smör, bröd, läsk, lättöl, juice, vatten eller mjölk.</a>
-    </div>
-    <div class="avhämtning">
-        <h3><a>För avhämtning</a></h3>
-        <a>Första rätten 	120:- <br> Övriga rätter 90:- <br> Lunchpizzor 	85:- <br> OBS! Smör och bröd ingår ej vid avhämtning.
-        </a>
     </div>
     <div class="carte">
         <h2><a id="alecarte">Ur vår à la carte meny</a></h2>
@@ -164,20 +139,46 @@
 
         <h3><a>Efterrätter</a></h3><a>Gammaldags vaniljglass. Serveras med chokladsås eller hallonsås 49:- <br> Årtidssorbet 63:- <br> Petit four 27:- <br>
         </a>
-
-
+    </div>
+    <br>
+    <br>
+    <h2 class="Övrigt">
+        <a id="Övrigt">Övrigt</a>
+    </h2>
+    <div class="Barnmatsedel">
+        <h3><a>Barnmatsedel</a></h3>
+        <a>Korv eller hamburgare med pommes frites 53:- <br> Barnpizza 67:- <br> Spagetthi med köttfärssås 62:- </a>
+    </div>
+    <div class="Lunchpizzor">
+        <h3><a>Lunchpizzor</a></h3>
+        <a>Alla Lunchpizzor kostar 65:- <br> Baltamasa tomat, ost, skinka, banan, curry <br> Cappricciosa Tomat, ost, skinka, champinjoner <br> Hawai Tomat, ost, skinka, ananas <br>
+            Funghi Tomat, ost, champinjoner</a>
+    </div>
+    <div class="Ibaren">
+        <h3><a>I baren</a></h3>
+        <a>Hamburgare av högrev 85:- <br> Nötter 45:- <br> Chips 55:- <br> Ost talrik 65:-</a>
+    </div>
+    <div class="priser">
+        <h3><a>Övriga Priser</a></h3>
+        <a>Första rätten varje dag kostar 94:-. <br> Alla övriga rätter kostar 75:-. <br> Kaffe 10:- (i samband med lunch)<br> I priset ingår: Varmrätt, salladsbuffé, smör, bröd, läsk, lättöl, juice, vatten eller mjölk.</a>
+    </div>
+    <div class="avhämtning">
+        <h3><a>För avhämtning</a></h3>
+        <a>Första rätten 	120:- <br> Övriga rätter 90:- <br> Lunchpizzor 	85:- <br> OBS! Smör och bröd ingår ej vid avhämtning.
+        </a>
     </div>
     <br>
     <br>
     <br>
     <div class="tack">
-        <h2>
+        <img src="rum_4.jpg">
+        <p>
             <a>Tack för besöket och glöm inte att Restaurang EatIT har levande musik flera dagar i veckan och quiz på fredag, varje vecka året runt.</a> <br> <a style="color: #ccc1;">Under mello har vi Pride tema.</a>
             <a><br> Vi på Restaurang EatIT önskar er en fortsatt trevlig dag. <br> Evert och Berit med personal</a>
-        </h2>
+        </p>
         <br>
         <br>
-        <h2><a>Hitta hit!</a></h2>
+        <h2><a href="kontakt.html">hitta hit!</a></h2>
         <h2><a>Det gör du under Kontakta Oss</a></h2>
     </div>
 </body>
