--- a/index.html
+++ b/index.html
@@ -37,18 +37,8 @@
             </div>
         </div>
     </div>
-    <!--<div class="tack">
-        <h2>
-            <a>Tack för besöket och glöm inte att Restaurang EatIT har levande musik flera dagar i veckan och quiz på fredag, varje vecka året runt.</a> <br> <a style="color: #ccc1;">Under mello har vi Pride tema.</a>
-            <a><br> Vi på Restaurang EatIT önskar er en fortsatt trevlig dag. <br> Evert och Berit med personal</a>
-        </h2>
-        <br>
-        <br>
-        <h2><a>Hitta hit!</a></h2>
-        <h2><a>Det gör du under Kontakta Oss</a></h2>
-    </div>-->
     <div class="footer">
-        <a>Ansvarig: Erik S.N</a>
+        <h2><a>Ansvarig: Erik S.N</a></h2>
     </div>
 </body>
 
