--- a/src/pages/Beställ.html
+++ b/src/pages/Beställ.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Ändra restaurang till företagets namn-->
     <title>Resturang</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body class="FormBody">
+<body>
     <div class="header">
         <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <a href="index.html"><img src="Logo.png" alt="EatIT" class="logo"></a>
+        <a href="index.html"><img src="../..//public/Logo.png" alt="EatIT" class="logo"></a>
         <div class="menyer">
             <div class="matmeny meny">
                 <a href="meny.html">Meny</a>
@@ -26,55 +26,39 @@
             </div>
         </div>
     </div>
-    <div class="Form" action="mailto:erisve0801@skola.goteborg.se" enctype="text/plain">
-        <form method="post" id="form">
+    <div class="Form2">
+        <br>
+        <form method="post">
             <div class="elem-group">
                 <label for="name">Ditt namn och efternamn</label>
                 <input type="text" id="name" name="visitor_name" placeholder="Ditt namn och efternamn" required>
             </div>
-            <br>
             <div class="elem-group">
                 <label for="email">din mail</label>
                 <input type="email" id="email" name="visitor_email" placeholder="din mail" required>
             </div>
-            <br>
             <div class="elem-group">
                 <label for="phone">Telefon nummer</label>
-                <input type="tel" id="phone" name="visitor_phone" placeholder="Telefon" required>
+                <input type="tel" id="phone" name="visitor_phone" placeholder="Telefon" pattern=(\d{3})-?\s?(\d{3})-?\s?(\d{4}) required>
             </div>
             <br>
-            <div class="elem-group inlined">
-                <label for="adult">Vuxna</label>
-                <input type="number" id="adult" name="total_adults" placeholder="2" min="1" required>
+            <div class="elem-group">
+                <label for="adress">adress</label>
+                <input type="text" pattern="[a-zA-Z0-9-]+" id="adress" placeholder="Adress">
             </div>
             <br>
-            <div class="elem-group inlined">
-                <label for="child">Barn</label>
-                <input type="number" id="child" name="total_children" placeholder="2" min="0" required>
-            </div>
-            <br>
-            <div class="elem-group inlined">
-                <label for="checkin-date">dag</label>
-                <input type="date" id="day" name="checkin" required>
-            </div>
-            <br>
-            <div class="elem-group inlined">
-                <label for="checkout-date">tid</label><br>
-                <input type="time" id="time" name="checkout" required>
-            </div>
+            <label>Din order</label>
+            <textarea name="Beställning" cols="30" rows="10"></textarea>
             <button type="submit">Boka</button>
         </form>
         <br>
         <br>
         <div>
-            <a href="Beställ.html">ifall du vill beställa hem</a>
+            <a href="boka.html">ifall du vill boka bord</a>
         </div>
         <br>
         <br>
     </div>
 </body>
-
-<script>
-</script>
 
 </html>
