--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EatIT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body class="body">
     <div class="header">
         <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <img src="Logo.png" alt="EatIT" class="logo" href="index.html">
+        <img src="../../public/Logo.png" alt="EatIT" class="logo" href="index.html">
         <div class="menyer">
             <div class="matmeny meny">
                 <a class="meny-text" href="meny.html">Meny</a>
