--- a/src/pages/kontakt.html
+++ b/src/pages/kontakt.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Ändra restaurang till företagets namn-->
     <title>Resturang</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
