--- a/src/pages/meny.html
+++ b/src/pages/meny.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Ändra restaurang till företagets namn-->
     <title>Resturang</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <div class="header">
         <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <a href="index.html"><img src="Logo.png" alt="EatIT" class="logo"></a>
+        <a href="index.html"><img src="../../public/Logo.png" alt="EatIT" class="logo"></a>
         <div class="menyer">
             <div class="matmeny meny">
                 <a href="meny.html">Meny</a>
@@ -46,7 +46,7 @@
             <table>
                 <tr>
                     <td>
-                        <h4><a>Måndag</a></h4> <br> Stekt makrill med gräddstuvad bladspenat och kokt potatis <br> Fettuchini med vitlök, musslor och crême fraiche
+                        <h4><a>Måndag</a></h4> <br> Stekt makrill med gräddstuvad bladspenat och kokt potatis<br> Fettuchini med vitlök, musslor och crême fraiche
                     </td>
                     <td>
                         <h4><a>Tisdag</a></h4> <br> Svensk biffstek med lök, ägg och stekt potatis <br> Fisknäcka ”Bohus” Penne med tomatsås, kyckling och grönsaker <br> Schnitzel med stekt potatis, smörslungade ärtor och citron
@@ -117,20 +117,19 @@
         </div>
     </div>
     <div class="carte">
-        <h2><a id="alecarte">Ur vår à la carte meny</a></h2>
-        <a>Förrätter Grekisk sallad med vitlöksbröd 54:- <br> Dagens soppa 50:- <br> Toast Skagen 56:-</a>
+        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> <img src="../../public/grekiskSalad.jpg" height="200px" width="270px"> <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <img src="../../public/soppa.jpg" height="200px" width="270px"> <br>Dagens soppa 50:- <br> Toast Skagen 56:-</a>
 
         <br>
         <br>
 
-        <h3><a>Kött</a></h3><a>EatIT:s plankstek. 220 g oxfilé på ekplanka med pepparsås, sparris och bearnaisesås. 154:- <br> Halstrad lövbiff med kryddsmör, ädelost eller pickels. Serveras med klyftpotatis och smörfrästa champinjoner. 140:- <br> Fläskfilé ”Oscar”. En svensk klassiker där fläskfilén serveras med bearnaisesås, sparris och räkor 128:- <br>
+        <h3><a>Kött</a></h3><a> <img src="../../public/planksteak.jpg" height="200px" width="270px"><br>EatIT:s plankstek. 220 g oxfilé på ekplanka med pepparsås, sparris och bearnaisesås. 154:- <br><img src="../../public/lövbiff.jpg" height="200px" width="270px" ><br>Halstrad lövbiff med kryddsmör, ädelost eller pickels. Serveras med klyftpotatis och smörfrästa champinjoner. 140:- <br> Fläskfilé ”Oscar”. En svensk klassiker där fläskfilén serveras med bearnaisesås, sparris och räkor 128:- <br>
         </a>
 
-        <h3><a>Fisk</a></h3><a>Halstrad laxfjäril, serveras med sparris, vitlöksbearnaisesås, löjromsklick och kokt potatis 120:- <br> Pocherad hälleflundra på klassiskt vis med färskriven pepprarrot och skriat smör 176:- <br>
+        <h3><a>Fisk</a></h3><img src="../../public/lax.jpg" height="200px" width="270px"><br><a>Halstrad laxfjäril, serveras med sparris, vitlöksbearnaisesås, löjromsklick och kokt potatis 120:- <br> <img src="../../public/hälleflundra.jpg" height="200px" width="270px" > <br>Pocherad hälleflundra på klassiskt vis med färskriven pepprarrot och skriat smör 176:- <br>
         </a>
 
 
-        <h3><a>Pastarätter</a></h3><a>Lasagne al forno. Pastaplattor som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br> Fettuchino a la pesto. Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
+        <h3><a>Pastarätter</a></h3><img src="../../public/lasagna al forno.jpg"><br><a>Lasagne al forno. Pastaplattor som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <img src="fettuccine.jpg" height="200px" width="270px"> <br> Fettuccine a la pesto. Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
         </a>
 
         <h3><a>Barnmatsedel</a></h3><a>Korv eller hamburgare med pommes frites 43:- <br> Barnpizza 47:- <br> Spaghetti med köttfärssås 42:- <br>
