--- a/src/pages/meny.html
+++ b/src/pages/meny.html
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div class="carte">
-        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> <img src="../../public/grekiskSalad.jpg" height="200px" width="270px"> <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <img src="../../public/soppa.jpg" height="200px" width="270px"> <br>Dagens soppa 50:- <br> Toast Skagen 56:-</a>
+        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> <img src="../../public/grekiskSalad.jpg" height="200px" width="270px"> <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <img src="../../public/soppa.jpg" height="200px" width="270px"> <br>Dagens soppa 50:- <br> <img src="../../public/ToastSkagen.jpg" height="200px" width="270px"> <br> Toast Skagen 56:-</a>
 
         <br>
         <br>
