--- a/src/pages/Beställ.html
+++ b/src/pages/Beställ.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Ändra restaurang till företagets namn-->
-    <title>Resturang</title>
+    <title>EatIT</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <div class="header">
-        <!--Ändra bild.png och alt="Resturang" till restaurang namn-->
-        <a href="index.html"><img src="../..//public/Logo.png" alt="EatIT" class="logo"></a>
+        <a href="index.html"><img src="../../public/Logo.png" alt="EatIT" class="logo"></a>
         <div class="menyer">
             <div class="matmeny meny">
                 <a href="meny.html">Meny</a>
