--- a/meny.html
+++ b/meny.html
@@ -127,7 +127,7 @@
         </a>
 
 
-        <h3><a>Pastarätter</a></h3><img src="../../public/lasagna al forno.jpg"><br><a>Lasagne al forno. Pastaplattor som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <img src="fettuccine.jpg" height="200px" width="270px"> <br> Fettuccine a la pesto. Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
+        <h3><a>Pastarätter</a></h3><img src="../../public/lasagna al forno.jpg"><br><a>Lasagne al forno. Pastaplattor som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <img src="../../public/fettuccine.jpg" height="200px" width="270px"> <br> Fettuccine a la pesto. Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
         </a>
 
         <h3><a>Barnmatsedel</a></h3><a>Korv eller hamburgare med pommes frites 43:- <br> Barnpizza 47:- <br> Spaghetti med köttfärssås 42:- <br>
