--- a/meny.html
+++ b/meny.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EatIT</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="header">
-        <a href="index.html"><img src="../../public/Logo.png" alt="EatIT" class="logo"></a>
+        <a href="index.html"><img src="./Logo.png" alt="EatIT" class="logo"></a>
         <div class="menyer">
             <div class="matmeny meny">
                 <a href="meny.html">Meny</a>
@@ -44,23 +44,29 @@
             <table>
                 <tr>
                     <td>
-                        <h4><a>Måndag</a></h4> <br> Stekt makrill med gräddstuvad bladspenat och kokt potatis<br> Fettuchini med vitlök, musslor och crême fraiche
+                        <h4><a>Måndag</a></h4> <br> Stekt makrill med gräddstuvad bladspenat och kokt potatis<br>
+                        Fettuchini med vitlök, musslor och crême fraiche
                     </td>
                     <td>
-                        <h4><a>Tisdag</a></h4> <br> Svensk biffstek med lök, ägg och stekt potatis <br> Fisknäcka ”Bohus” Penne med tomatsås, kyckling och grönsaker <br> Schnitzel med stekt potatis, smörslungade ärtor och citron
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4><a>Onsdag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Ugnsbakad lax med löjromsås och kokt potatis <br> Pastasnäckor ”Gorgonzola”
-                    </td>
-                    <td>
-                        <h4><a>Torsdag</a></h4> <br> Rostbiff med rödvinssås, potatisgratäng <br> Kokt torsk med skirat smör och pepparrot <br> Lasagne ”al Forno”
+                        <h4><a>Tisdag</a></h4> <br> Svensk biffstek med lök, ägg och stekt potatis <br> Fisknäcka
+                        ”Bohus” Penne med tomatsås, kyckling och grönsaker <br> Schnitzel med stekt potatis,
+                        smörslungade ärtor och citron
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <h4><a>Fredag</a></h4> <br> Oxfilé med persiljesmör och potatismos <br> Ostpanerad fiskfilé med skarpsås <br> Spaghetti ”Bolognese” Tacos
+                        <h4><a>Onsdag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br>
+                        Ugnsbakad lax med löjromsås och kokt potatis <br> Pastasnäckor ”Gorgonzola”
+                    </td>
+                    <td>
+                        <h4><a>Torsdag</a></h4> <br> Rostbiff med rödvinssås, potatisgratäng <br> Kokt torsk med skirat
+                        smör och pepparrot <br> Lasagne ”al Forno”
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h4><a>Fredag</a></h4> <br> Oxfilé med persiljesmör och potatismos <br> Ostpanerad fiskfilé med
+                        skarpsås <br> Spaghetti ”Bolognese” Tacos
                     </td>
                     <td>
                         <h4><a>Lördag</a></h4> <br> Rostbiff med rödvinssås, potatisgratäng <br> Spaghetti ”Bolognese”
@@ -68,7 +74,8 @@
                 </tr>
                 <tr>
                     <td>
-                        <h4><a>Söndag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Fettuchini med vitlök, musslor och crême fraiche
+                        <h4><a>Söndag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br>
+                        Fettuchini med vitlök, musslor och crême fraiche
                     </td>
                 </tr>
             </table>
@@ -84,23 +91,29 @@
             <table>
                 <tr>
                     <td>
-                        <h4><a>Måndag</a></h4> <br> Schnitzel med stekt potatis, smörslungade ärtor och citron <br> Fisknäcka ”Bohus” <br> Spaghetti ”Bolognese”
+                        <h4><a>Måndag</a></h4> <br> Schnitzel med stekt potatis, smörslungade ärtor och citron <br>
+                        Fisknäcka ”Bohus” <br> Spaghetti ”Bolognese”
                     </td>
                     <td>
-                        <h4><a>Tisdag</a></h4> <br> Svensk biffstek med lök, ägg och stekt potatis <br> Stekt makrill med gräddstuvad bladspenat och kokt potatis <br> Fettuchini med vitlök, musslor och crême fraiche
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4><a>Onsdag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Kokt torsk med skirat smör och pepparrot <br> Lasagne ”al Forno”
-                    </td>
-                    <td>
-                        <h4><a>Torsdag</a></h4> Rostbiff med rödvinssås, potatisgratäng <br> Ugnsbakad lax med löjromsås och kokt potatis <br> Pastasnäckor ”Gorgonzola”
+                        <h4><a>Tisdag</a></h4> <br> Svensk biffstek med lök, ägg och stekt potatis <br> Stekt makrill
+                        med gräddstuvad bladspenat och kokt potatis <br> Fettuchini med vitlök, musslor och crême
+                        fraiche
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <h4><a>Fredag</a></h4> <br> Oxfilé med persiljesmör och potatismos <br> Ostpanerad fiskfilé med skarpsås <br> Penne med tomatsås, kyckling och grönsaker
+                        <h4><a>Onsdag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Kokt
+                        torsk med skirat smör och pepparrot <br> Lasagne ”al Forno”
+                    </td>
+                    <td>
+                        <h4><a>Torsdag</a></h4> Rostbiff med rödvinssås, potatisgratäng <br> Ugnsbakad lax med löjromsås
+                        och kokt potatis <br> Pastasnäckor ”Gorgonzola”
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h4><a>Fredag</a></h4> <br> Oxfilé med persiljesmör och potatismos <br> Ostpanerad fiskfilé med
+                        skarpsås <br> Penne med tomatsås, kyckling och grönsaker
                     </td>
                     <td>
                         <h4><a>Lördag</a></h4> <br> Rostbiff med rödvinssås, potatisgratäng <br> Spaghetti ”Bolognese”
@@ -108,32 +121,47 @@
                 </tr>
                 <tr>
                     <td>
-                        <h4><a>Söndag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br> Fettuchini med vitlök, musslor och crême fraiche
+                        <h4><a>Söndag</a></h4> <br> Grillad fläskkotlett med bearnasiesås och klyftpotatis <br>
+                        Fettuchini med vitlök, musslor och crême fraiche
                     </td>
                 </tr>
             </table>
         </div>
     </div>
     <div class="carte">
-        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> <img src="../../public/grekiskSalad.jpg" height="200px" width="270px"> <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <img src="../../public/soppa.jpg" height="200px" width="270px"> <br>Dagens soppa 50:- <br> <img src="../../public/ToastSkagen.jpg" height="200px" width="270px"> <br> Toast Skagen 56:-</a>
+        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> <img src="./grekiskSalad.jpg" height="200px" width="270px">
+        <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <img src="./soppa.jpg" height="200px" width="270px"> <br>Dagens
+            soppa 50:- <br> <img src="./ToastSkagen.jpg" height="200px" width="270px"> <br> Toast Skagen 56:-</a>
 
         <br>
         <br>
 
-        <h3><a>Kött</a></h3><a> <img src="../../public/planksteak.jpg" height="200px" width="270px"><br>EatIT:s plankstek. 220 g oxfilé på ekplanka med pepparsås, sparris och bearnaisesås. 154:- <br><img src="../../public/lövbiff.jpg" height="200px" width="270px" ><br>Halstrad lövbiff med kryddsmör, ädelost eller pickels. Serveras med klyftpotatis och smörfrästa champinjoner. 140:- <br> Fläskfilé ”Oscar”. En svensk klassiker där fläskfilén serveras med bearnaisesås, sparris och räkor 128:- <br>
+        <h3><a>Kött</a></h3><a> <img src="./planksteak.jpg" height="200px" width="270px"><br>EatIT:s
+            plankstek. 220 g oxfilé på ekplanka med pepparsås, sparris och bearnaisesås. 154:- <br><img
+                src="./lövbiff.jpg" height="200px" width="270px"><br>Halstrad lövbiff med kryddsmör, ädelost
+            eller pickels. Serveras med klyftpotatis och smörfrästa champinjoner. 140:- <br> Fläskfilé ”Oscar”. En
+            svensk klassiker där fläskfilén serveras med bearnaisesås, sparris och räkor 128:- <br>
         </a>
 
-        <h3><a>Fisk</a></h3><img src="../../public/lax.jpg" height="200px" width="270px"><br><a>Halstrad laxfjäril, serveras med sparris, vitlöksbearnaisesås, löjromsklick och kokt potatis 120:- <br> <img src="../../public/hälleflundra.jpg" height="200px" width="270px" > <br>Pocherad hälleflundra på klassiskt vis med färskriven pepprarrot och skriat smör 176:- <br>
+        <h3><a>Fisk</a></h3><img src="./lax.jpg" height="200px" width="270px"><br><a>Halstrad laxfjäril,
+            serveras med sparris, vitlöksbearnaisesås, löjromsklick och kokt potatis 120:- <br> <img
+                src="./hälleflundra.jpg" height="200px" width="270px"> <br>Pocherad hälleflundra på klassiskt
+            vis med färskriven pepprarrot och skriat smör 176:- <br>
         </a>
 
 
-        <h3><a>Pastarätter</a></h3><img src="../../public/lasagna al forno.jpg"><br><a>Lasagne al forno. Pastaplattor som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <img src="../../public/fettuccine.jpg" height="200px" width="270px"> <br> Fettuccine a la pesto. Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
+        <h3><a>Pastarätter</a></h3><img src="./lasagna al forno.jpg"><br><a>Lasagne al forno. Pastaplattor
+            som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <img
+                src="./fettuccine.jpg" height="200px" width="270px"> <br> Fettuccine a la pesto.
+            Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
         </a>
 
-        <h3><a>Barnmatsedel</a></h3><a>Korv eller hamburgare med pommes frites 43:- <br> Barnpizza 47:- <br> Spaghetti med köttfärssås 42:- <br>
+        <h3><a>Barnmatsedel</a></h3><a>Korv eller hamburgare med pommes frites 43:- <br> Barnpizza 47:- <br> Spaghetti
+            med köttfärssås 42:- <br>
         </a>
 
-        <h3><a>Efterrätter</a></h3><a>Gammaldags vaniljglass. Serveras med chokladsås eller hallonsås 49:- <br> Årtidssorbet 63:- <br> Petit four 27:- <br>
+        <h3><a>Efterrätter</a></h3><a>Gammaldags vaniljglass. Serveras med chokladsås eller hallonsås 49:- <br>
+            Årtidssorbet 63:- <br> Petit four 27:- <br>
         </a>
     </div>
     <br>
@@ -147,7 +175,8 @@
     </div>
     <div class="Lunchpizzor">
         <h3><a>Lunchpizzor</a></h3>
-        <a>Alla Lunchpizzor kostar 65:- <br> Baltamasa tomat, ost, skinka, banan, curry <br> Cappricciosa Tomat, ost, skinka, champinjoner <br> Hawai Tomat, ost, skinka, ananas <br>
+        <a>Alla Lunchpizzor kostar 65:- <br> Baltamasa tomat, ost, skinka, banan, curry <br> Cappricciosa Tomat, ost,
+            skinka, champinjoner <br> Hawai Tomat, ost, skinka, ananas <br>
             Funghi Tomat, ost, champinjoner</a>
     </div>
     <div class="Ibaren">
@@ -156,20 +185,23 @@
     </div>
     <div class="priser">
         <h3><a>Övriga Priser</a></h3>
-        <a>Första rätten varje dag kostar 94:-. <br> Alla övriga rätter kostar 75:-. <br> Kaffe 10:- (i samband med lunch)<br> I priset ingår: Varmrätt, salladsbuffé, smör, bröd, läsk, lättöl, juice, vatten eller mjölk.</a>
+        <a>Första rätten varje dag kostar 94:-. <br> Alla övriga rätter kostar 75:-. <br> Kaffe 10:- (i samband med
+            lunch)<br> I priset ingår: Varmrätt, salladsbuffé, smör, bröd, läsk, lättöl, juice, vatten eller mjölk.</a>
     </div>
     <div class="avhämtning">
         <h3><a>För avhämtning</a></h3>
-        <a>Första rätten 	120:- <br> Övriga rätter 90:- <br> Lunchpizzor 	85:- <br> OBS! Smör och bröd ingår ej vid avhämtning.
+        <a>Första rätten 120:- <br> Övriga rätter 90:- <br> Lunchpizzor 85:- <br> OBS! Smör och bröd ingår ej vid
+            avhämtning.
         </a>
     </div>
     <br>
     <br>
     <br>
     <div class="tack">
-        <img src="rum_4.jpg">
+        <img src="./rum_4.jpg">
         <p>
-            <a>Tack för besöket och glöm inte att Restaurang EatIT har levande musik flera dagar i veckan och quiz på fredag, varje vecka året runt.</a> <br> <a style="color: #ccc1;">Under mello har vi Pride tema.</a>
+            <a>Tack för besöket och glöm inte att Restaurang EatIT har levande musik flera dagar i veckan och quiz på
+                fredag, varje vecka året runt.</a> <br> <a style="color: #ccc1;">Under mello har vi Pride tema.</a>
             <a><br> Vi på Restaurang EatIT önskar er en fortsatt trevlig dag. <br> Evert och Berit med personal</a>
         </p>
         <br>
