removed all images from meny.html

--- a/meny.html
+++ b/meny.html
@@ -129,30 +129,26 @@
         </div>
     </div>
     <div class="carte">
-        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> <img src="./grekiskSalad.jpg" height="200px" width="270px">
-        <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <img src="./soppa.jpg" height="200px" width="270px"> <br>Dagens
-            soppa 50:- <br> <img src="./ToastSkagen.jpg" height="200px" width="270px"> <br> Toast Skagen 56:-</a>
+        <h2><a id="alecarte">Ur vår à la carte meny</a></h2> 
+        <br> <a> Grekisk sallad med vitlöksbröd 54:- <br> <br>Dagens soppa 50:- <br>  <br> Toast Skagen 56:- </a>
 
         <br>
         <br>
 
-        <h3><a>Kött</a></h3><a> <img src="./planksteak.jpg" height="200px" width="270px"><br>EatIT:s
-            plankstek. 220 g oxfilé på ekplanka med pepparsås, sparris och bearnaisesås. 154:- <br><img
-                src="./lövbiff.jpg" height="200px" width="270px"><br>Halstrad lövbiff med kryddsmör, ädelost
+        <h3><a>Kött</a></h3><a> <br>EatIT:s
+            plankstek. 220 g oxfilé på ekplanka med pepparsås, sparris och bearnaisesås. 154:- <br><br>Halstrad lövbiff med kryddsmör, ädelost
             eller pickels. Serveras med klyftpotatis och smörfrästa champinjoner. 140:- <br> Fläskfilé ”Oscar”. En
             svensk klassiker där fläskfilén serveras med bearnaisesås, sparris och räkor 128:- <br>
         </a>
 
-        <h3><a>Fisk</a></h3><img src="./lax.jpg" height="200px" width="270px"><br><a>Halstrad laxfjäril,
-            serveras med sparris, vitlöksbearnaisesås, löjromsklick och kokt potatis 120:- <br> <img
-                src="./hälleflundra.jpg" height="200px" width="270px"> <br>Pocherad hälleflundra på klassiskt
+        <h3><a>Fisk</a></h3><br><a>Halstrad laxfjäril,
+            serveras med sparris, vitlöksbearnaisesås, löjromsklick och kokt potatis 120:- <br>  <br>Pocherad hälleflundra på klassiskt
             vis med färskriven pepprarrot och skriat smör 176:- <br>
         </a>
 
 
-        <h3><a>Pastarätter</a></h3><img src="./lasagna al forno.jpg"><br><a>Lasagne al forno. Pastaplattor
-            som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <img
-                src="./fettuccine.jpg" height="200px" width="270px"> <br> Fettuccine a la pesto.
+        <h3><a>Pastarätter</a></h3><br><a>Lasagne al forno. Pastaplattor
+            som är varvade med köttfärssås och bechamelsås som sedan gratineras med parmesanost 84:- <br><br> <br> Fettuccine a la pesto.
             Bandspaghetti med pesto, grönsaker och kycklingfilé 69:- <br>
         </a>
 
@@ -198,7 +194,6 @@
     <br>
     <br>
     <div class="tack">
-        <img src="./rum_4.jpg">
         <p>
             <a>Tack för besöket och glöm inte att Restaurang EatIT har levande musik flera dagar i veckan och quiz på
                 fredag, varje vecka året runt.</a> <br> <a style="color: #ccc1;">Under mello har vi Pride tema.</a>
@@ -209,6 +204,7 @@
         <h2><a href="kontakt.html">hitta hit!</a></h2>
         <h2><a>Det gör du under Kontakta Oss</a></h2>
     </div>
+    <br>
 </body>
 
 </html>
